--- a/springsecurity-simple-factory-auth/src/main/resources/templates/sign-up.html
+++ b/springsecurity-simple-factory-auth/src/main/resources/templates/sign-up.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Register<h1>
-    <form th:action=@"/register" method="post">
+<h1>Register</h1>
+    <form th:action="@{/register}" method="post">
         Login:
         <input type="text" name="username">
         Password:
