--- a/springsecurity-simple-factory-auth/src/main/resources/templates/hello.html
+++ b/springsecurity-simple-factory-auth/src/main/resources/templates/hello.html
@@ -7,6 +7,7 @@
 <body>
 
     Hello <span th:text="${name}" />
+    details:  <span th:text="${details}" />
     <table>
         <th:block th:each="auth : ${authorities}">
             <tr>
